--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HelloWorld)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled main.cpp Song.cpp Song.h)
+add_executable(untitled main.cpp Song.cpp Song.h Library.cpp Library.h)
