--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
-project(HelloWorld)
+project(CS220FinalProject)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled main.cpp Song.cpp Song.h Library.cpp Library.h)
+add_executable(CS220FinalProject Library.cpp Library.h Song.cpp Song.h)
